--- a/scss/responsive.scss
+++ b/scss/responsive.scss
@@ -44,6 +44,9 @@
     .homemain__picture img {
         max-width: 445px;
     }
+    .Slovenia__content h3 {
+        line-height: 21px;
+    }
 }
 
 @media screen and (max-width: 991px) {
