--- a/scss/style.scss
+++ b/scss/style.scss
@@ -452,7 +452,7 @@ section.localbanner {
 section.attractionbanner {
     position: relative;
     padding: 200px 0 150px 0;
-    background-image: url(../images/budgetbanner.jpg);
+    background-image: url(../images/attractionbanner.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
