--- a/css/style.css
+++ b/css/style.css
@@ -470,7 +470,7 @@ section.localbanner::after {
 section.attractionbanner {
   position: relative;
   padding: 200px 0 150px 0;
-  background-image: url(../images/budgetbanner.jpg);
+  background-image: url(../images/attractionbanner.jpeg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
