--- a/scss/responsive.scss
+++ b/scss/responsive.scss
@@ -48,6 +48,12 @@
     .Slovenia__content h3 {
         line-height: 21px;
     }
+
+    .homemain__part {
+        h3 {
+            font-size: 24px;
+        }
+    }
 }
 
 @media screen and (max-width: 991px) {
@@ -204,7 +210,7 @@
         }
 
         &__part {
-            padding: 30px 0 0 0;
+            padding: 30px 0;
         }
     }
 }
@@ -301,6 +307,17 @@
 
     .end__content p {
         text-align: justify;
+    }
+}
+
+@media screen and (max-width:425px) {
+    .homemain__part h3 {
+        font-size: 20px;
+        line-height: 30px;
+    }
+
+    .end__content.attraction {
+        padding: 0 0 20px 0;
     }
 }
 
