--- a/scss/style.scss
+++ b/scss/style.scss
@@ -468,4 +468,30 @@ section.attractionbanner {
 
 /*attraction-css-end*/
 
+/*entertainment-css-start*/
+
+section.entertainmentbanner {
+    position: relative;
+    padding: 200px 0 150px 0;
+    background-image: url(../images/entertainmentbanner.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    object-fit: cover;
+
+    &::after {
+        content: '';
+        position: absolute;
+        inset: 0;
+        background-color: rgba(0, 0, 0, 0.40);
+    }
+}
+.homemain__part.entertainment p::before {
+    content: none;
+}
+.homemain__part.entertainment {
+    margin: 30px 0 0 0;
+}
+/*entertainment-css-end*/
+
 /*# sourceMappingURL=style.css.map */
