--- a/scss/responsive.scss
+++ b/scss/responsive.scss
@@ -54,6 +54,10 @@
             font-size: 24px;
         }
     }
+    header.site-header.sticky .site-nav a {
+        padding: 8px 4px !important;
+        font-size: 15px;
+    }
 }
 
 @media screen and (max-width: 991px) {
