--- a/css/style.css
+++ b/css/style.css
@@ -496,7 +496,7 @@ section.entertainmentbanner::after {
 }
 
 /*entertainment-css-end*/
-/*entertainment-css-start*/
+/*contactbanner-css-start*/
 section.contactbanner {
   position: relative;
   padding: 200px 0 150px 0;
@@ -507,11 +507,30 @@ section.contactbanner {
   object-fit: cover;
 }
 
-.homemain__part.entertainment {
-  margin: 30px 0 0 0;
+.contactpart {
+  padding: 50px 0;
+}
+.contactpart p {
+  font-size: 16px;
+  line-height: 24px;
+  color: #323232;
+}
+.contactpart li {
+  font-size: 15px;
+  font-family: "Montserrat";
 }
 
-/*entertainment-css-end*/
+span {
+  font-family: "Prata";
+  font-size: 17px;
+  font-weight: 700;
+}
+
+.contact__info {
+  padding: 30px 0 0 0;
+}
+
+/*contactbanner-css-end*/
 
 
 /*# sourceMappingURL=style.css.map */
