--- a/css/responsive.css
+++ b/css/responsive.css
@@ -297,6 +297,9 @@ h3 {
   .hotelcard__main {
     display: inherit;
   }
+  .contact__part p {
+    text-align: justify;
+  }
   .footer__social {
     padding: 10px 0;
   }
@@ -313,6 +316,10 @@ h3 {
   }
   .end__content p {
     text-align: justify;
+  }
+  .contact__info h4 {
+    font-size: 16px;
+    line-height: 22px;
   }
 }
 @media screen and (max-width: 425px) {
