--- a/scss/style.scss
+++ b/scss/style.scss
@@ -543,7 +543,7 @@ section.privacybanner {
 
 /*terms-css-start*/
 
-section.termsbannerbanner {
+section.termsbanner{
     position: relative;
     padding: 200px 0 150px 0;
     background-image: url(../images/termsbanner.png);
