--- a/css/style.css
+++ b/css/style.css
@@ -1,601 +1,17 @@
-/*global start*/
-@import url("https://fonts.googleapis.com/css2?family=Prata&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap");
-li {
-  list-style: none;
-}
+/* Error: expected "}".
+ *    ,
+ * 42 | @media (prefers-color-scheme: dark) {
+ *    |                                      ^
+ *    '
+ *   scss\style.scss 42:38  root stylesheet */
 
-body {
-  font-family: "Prata", serif;
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: 'Error: expected "}".\a    \2577 \a 42 \2502  @media (prefers-color-scheme: dark) {\d\a    \2502                                       ^\a    \2575 \a   scss\\style.scss 42:38  root stylesheet';
 }
-
-a,
-button {
-  font-family: "Montserrat", sans-serif;
-}
-
-p {
-  font-size: 20px;
-  font-weight: 400;
-  color: #fff;
-  font-family: "Montserrat", sans-serif;
-}
-@media screen and (max-width: xxxl) {
-  p {
-    font-size: 16px;
-    line-height: 50px;
-  }
-}
-@media screen and (max-width: 575px) {
-  p {
-    line-height: 25px;
-  }
-}
-
-h1 {
-  font-size: 60px;
-  font-weight: 500;
-  line-height: 75px;
-  color: #fff;
-}
-@media screen and (max-width: xxxl) {
-  h1 {
-    font-size: 45px;
-    line-height: 50px;
-  }
-}
-@media screen and (max-width: 1024px) {
-  h1 {
-    font-size: 35px;
-    line-height: 45px;
-  }
-}
-
-h2 {
-  font-size: 40px;
-  color: #001934;
-  line-height: 30px;
-}
-@media screen and (max-width: 768px) {
-  h2 {
-    font-size: 28px;
-  }
-}
-@media screen and (max-width: 575px) {
-  h2 {
-    font-size: 21px;
-  }
-}
-
-h3 {
-  font-size: 30px;
-  line-height: 40px;
-}
-@media screen and (max-width: 768px) {
-  h3 {
-    font-size: 22px;
-    line-height: 28px;
-  }
-}
-
-* {
-  box-sizing: border-box;
-}
-
-body {
-  margin: 0;
-  padding: 0;
-  overflow-x: hidden;
-  font-size: 1.6rem;
-}
-
-ul {
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
-}
-
-img {
-  width: 100%;
-}
-
-a {
-  text-decoration: none;
-  color: inherit;
-}
-
-a:focus {
-  color: inherit;
-}
-
-html {
-  font-size: 62.5%;
-}
-
-.equal {
-  display: -webkit-flex;
-}
-
-.container {
-  max-width: 1280px;
-  margin: 0 auto;
-  width: 100%;
-}
-
-/*global end*/
-/*header start*/
-header.site-header {
-  background: #001934;
-  font-size: 18px;
-  padding: 14px 0;
-  font-weight: 700;
-  text-transform: capitalize;
-  color: #fff;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 999;
-  width: 100%;
-  transition: 0.3s;
-}
-
-header.site-header.sticky {
-  background: rgba(0, 25, 52, 0.8117647059);
-  box-shadow: 2px 5px 10px rgba(0, 0, 0, 0.3);
-  animation: 500ms ease-in-out 0s normal none 1 running fadeInDown;
-  padding: 14px 0;
-  position: fixed;
-}
-
-.site-logo img {
-  width: 100%;
-  max-width: 200px;
-}
-
-.site-nav a {
-  padding: 8px 8px !important;
-  display: inline-block;
-  font-size: 17px;
-  color: #fff;
-  font-weight: 500;
-  transition: all 0.2s linear;
-}
-.site-nav a:hover {
-  transform: translateY(5px);
-}
-
-.site-header {
-  padding: 10px 0;
-}
-
-.site-header .container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.site-nav ul {
-  display: flex;
-  align-items: center;
-}
-
-.closed-menu {
-  display: none;
-}
-
-.menu-toggle {
-  display: none !important;
-}
-
-a.menu.active {
-  border-bottom: 1px solid #fff;
-  color: #fff !important;
-}
-
-/*header end*/
-/*banner-css-start*/
-section.homebanner {
-  position: relative;
-  padding: 250px 0;
-  background-image: url(../images/homebanner.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: inherit;
-  object-fit: cover;
-}
-section.homebanner::after {
-  content: "";
-  position: absolute;
-  inset: 0;
-  background-color: rgba(0, 0, 0, 0.4);
-}
-
-.home__title {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-  z-index: 2;
-  width: 100%;
-  max-width: 65%;
-  margin: 0 auto;
-  text-align: center;
-}
-.home__title p {
-  font-size: 18px;
-  line-height: 26px;
-}
-
-/*banner-css-end*/
-/*homecard-css-start*/
-section.homecard {
-  padding: 50px 0;
-}
-
-section.homecard.cuisine {
-  padding: 20px 0 0 0;
-}
-
-.homecard__text p {
-  font-size: 16px;
-  line-height: 25px;
-  color: #323232;
-  margin: 8px 0;
-}
-
-.end__content {
-  padding: 50px 0;
-}
-.end__content p {
-  font-size: 16px;
-  line-height: 25px;
-  color: #323232;
-  margin-top: 10px;
-}
-
-.homemain__part h3 {
-  margin-bottom: 10px;
-}
-.homemain__part p {
-  color: #323232;
-  font-size: 16px;
-  line-height: 25px;
-  position: relative;
-}
-.homemain__part p::before {
-  position: absolute;
-  content: "";
-  inset: 0;
-  background-color: #001934;
-  height: 7px;
-  width: 7px;
-  border-radius: 10px;
-  top: 10px;
-  left: -15px;
-}
-
-.homemain__picture img {
-  height: 500px;
-  object-fit: cover;
-  max-width: 560px;
-  border-radius: 8px;
-  width: 100%;
-}
-.homemain__part {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  height: 100%;
-}
-
-/*homecard-css-start*/
-/*footer-css-start*/
-.footer {
-  background: #001934;
-  padding: 50px 0;
-}
-.footer__social i {
-  color: #fff;
-  font-size: 25px;
-  line-height: 40px;
-  border: 1px solid #fff;
-  border-radius: 30px;
-  height: 40px;
-  width: 40px;
-}
-.footer__social ul {
-  display: flex;
-  gap: 15px;
-  text-align: center;
-}
-
-.footer__social {
-  padding: 30px 0;
-}
-
-.Useful_link {
-  color: #fff;
-}
-.Useful_link a:hover {
-  color: #fff;
-}
-
-.location a:hover {
-  color: #fff;
-}
-
-/*footer-css-end*/
-/*hotels-css-start*/
-section.hotelbanner {
-  position: relative;
-  padding: 200px 0 150px 0;
-  background-image: url(../images/hotelsbanner.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  object-fit: cover;
-}
-section.hotelbanner::after {
-  content: "";
-  position: absolute;
-  inset: 0;
-  background-color: rgba(0, 0, 0, 0.4);
-}
-
-.hotelcard {
-  padding: 50px 0 0 0;
-}
-.hotelcard p {
-  color: #323232;
-  font-size: 16px;
-  line-height: 25px;
-  margin: 30px 0;
-}
-.hotelcard__picture img {
-  max-width: 450px;
-  height: 450px;
-  object-fit: cover;
-}
-.hotelcard__part {
-  max-width: 450px;
-  padding: 30px 0;
-  margin-left: 55px;
-}
-.hotelcard__part h3 {
-  border-bottom: 1px solid #001934;
-}
-.hotelcard__main {
-  display: flex;
-  gap: 20px;
-}
-
-.hotel-btn a {
-  display: inline-block;
-  background: #001934;
-  color: #fff;
-  font-size: 18px;
-  text-align: center;
-  padding: 13px 30px;
-}
-.hotel-btn a:hover {
-  border: 1px solid #001934;
-  background-color: transparent;
-  color: #001934;
-}
-
-.hotel__numeric {
-  font-size: 30px;
-}
-
-/*hotels-css-end*/
-/*budget-css-start*/
-section.budget.budget {
-  padding: 50px 0 0 0;
-}
-
-section.budgetbanner {
-  position: relative;
-  padding: 200px 0 150px 0;
-  background-image: url(../images/budgetbanner.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  object-fit: cover;
-}
-section.budgetbanner::after {
-  content: "";
-  position: absolute;
-  inset: 0;
-  background-color: rgba(0, 0, 0, 0.4);
-}
-
-/*budget-css-end*/
-/*local-cuisine-css-start*/
-section.budget.budget {
-  padding: 50px 0 0 0;
-}
-
-section.localbanner {
-  position: relative;
-  padding: 200px 0 150px 0;
-  background-image: url(../images/localbanner.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: bottom;
-  object-fit: cover;
-}
-section.localbanner::after {
-  content: "";
-  position: absolute;
-  inset: 0;
-  background-color: rgba(0, 0, 0, 0.4);
-}
-
-.slovernia__card {
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
-  height: 100%;
-  transition: all 0.3s;
-}
-
-.slovernia__destinations {
-  height: 100%;
-}
-.slovernia__destinations img {
-  width: 100%;
-  height: 303px;
-  object-fit: cover;
-}
-
-.Slovenia__content {
-  padding: 20px 20px;
-}
-.Slovenia__content h3 {
-  color: #323232;
-  font-size: 15px;
-  font-weight: 600;
-}
-.Slovenia__content p {
-  color: #323232;
-  font-size: 16px;
-  line-height: 23px;
-  text-align: justify;
-}
-.Slovenia__content a {
-  background: #001934;
-  font-size: 17px;
-  color: #fff;
-  text-decoration: none;
-  text-transform: capitalize;
-  border: 1px solid;
-  padding: 10px 20px;
-  border-radius: 5px;
-}
-
-.col-lg-4.col-md-6.col-sm-12.space {
-  margin-top: 30px;
-}
-
-/*local-cuisine-css-end*/
-/*attraction-css-start*/
-.attractionbanner {
-  position: relative;
-  padding: 200px 0 150px 0;
-  background-image: url(../images/attractionbanner.jpeg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  object-fit: cover;
-}
-.attractionbanner::after {
-  content: "";
-  position: absolute;
-  inset: 0;
-  background-color: rgba(0, 0, 0, 0.4);
-}
-
-/*attraction-css-start*/
-/*entertainment-css-start*/
-section.entertainmentbanner {
-  position: relative;
-  padding: 200px 0 150px 0;
-  background-image: url(../images/entertainmentbanner.png);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  object-fit: cover;
-}
-section.entertainmentbanner::after {
-  content: "";
-  position: absolute;
-  inset: 0;
-  background-color: rgba(0, 0, 0, 0.4);
-}
-
-.homemain__part.entertainment p::before {
-  content: none;
-}
-
-.homemain__part.entertainment {
-  margin: 30px 0 0 0;
-}
-
-/*entertainment-css-end*/
-/*contactbanner-css-start*/
-section.contactbanner {
-  padding: 200px 0 150px 0;
-  background-image: url(../images/contactbanner.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  object-fit: cover;
-}
-
-.contactpart {
-  padding: 50px 0;
-}
-.contactpart p {
-  font-size: 16px;
-  line-height: 24px;
-  color: #323232;
-}
-.contactpart li {
-  font-size: 15px;
-  font-family: "Montserrat";
-}
-
-span {
-  font-family: "Prata";
-  font-size: 17px;
-  font-weight: 700;
-}
-
-.contact__info {
-  padding: 30px 0 0 0;
-}
-.contact__info h4 {
-  font-size: 20px;
-  line-height: 35px;
-}
-
-/*contactbanner-css-end*/
-/*privacy-css-start*/
-section.privacybanner {
-  position: relative;
-  padding: 200px 0 150px 0;
-  background-image: url(../images/privacybanner.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: inherit;
-  object-fit: cover;
-}
-section.privacybanner::after {
-  content: "";
-  position: absolute;
-  inset: 0;
-  background-color: rgba(0, 0, 0, 0.4);
-}
-
-/*privacy-css-end*/
-/*terms-css-start*/
-section.termsbanner {
-  position: relative;
-  padding: 200px 0 150px 0;
-  background-image: url(../images/termsbanner.png);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  object-fit: cover;
-}
-section.termsbanner::after {
-  content: "";
-  position: absolute;
-  inset: 0;
-  background-color: rgba(0, 0, 0, 0.4);
-}
-
-/*terms-css-end*/
-
-
-/*# sourceMappingURL=style.css.map */
