--- a/scss/style.scss
+++ b/scss/style.scss
@@ -39,7 +39,11 @@ a:focus {
 html {
     font-size: 62.5%;
 }
-
+@media (prefers-color-scheme: dark) {
+     {
+    filter:inverted;
+    }
+}
 .equal {
     display: -webkit-flex;
 }
