--- a/scss/style.scss
+++ b/scss/style.scss
@@ -39,11 +39,11 @@ a:focus {
 html {
     font-size: 62.5%;
 }
-@media (prefers-color-scheme: dark) {
-     {
-    filter:inverted;
-    }
-}
+// @media (prefers-color-scheme: dark) {
+//      favicon{
+//     filter:inverted;
+//     }
+// }
 .equal {
     display: -webkit-flex;
 }
