--- a/scss/style.scss
+++ b/scss/style.scss
@@ -39,11 +39,11 @@ a:focus {
 html {
     font-size: 62.5%;
 }
-// @media (prefers-color-scheme: dark) {
-//      favicon{
-//     filter:inverted;
-//     }
-// }
+@media (prefers-color-scheme: dark) {
+    #lightheme{
+    filter:invert(1);
+    }
+}
 .equal {
     display: -webkit-flex;
 }
@@ -482,7 +482,7 @@ section.localbanner {
 section.entertainmentbanner {
     position: relative;
     padding: 200px 0 150px 0;
-    background-image: url(../images/entertainmentbanner.png);
+    background-image: url(../images/entertainmentbanner.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -576,7 +576,7 @@ section.privacybanner {
 section.termsbanner {
     position: relative;
     padding: 200px 0 150px 0;
-    background-image: url(../images/termsbanner.png);
+    background-image: url(../images/termsbanner.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
