--- a/scss/responsive.scss
+++ b/scss/responsive.scss
@@ -218,6 +218,11 @@
             padding: 30px 0;
         }
     }
+    .Useful_link{
+        a{
+            font-size: 13px;
+        }
+    }
 }
 
 @include mq(md) {
@@ -272,6 +277,7 @@
     .hotel__numeric {
         display: none;
     }
+
 }
 
 @media screen and (max-width:767px) {
