--- a/scss/style.scss
+++ b/scss/style.scss
@@ -361,6 +361,7 @@ section.hotelbanner {
     font-size: 18px;
     text-align: center;
     padding: 13px 30px;
+    border: 1px solid $clr-darkblue;
 
     &:hover {
         border: 1px solid $clr-darkblue;
