--- a/css/responsive.css
+++ b/css/responsive.css
@@ -251,6 +251,14 @@ h3 {
   .Useful_link a {
     font-size: 13px;
   }
+  .homemain__picture.casino img {
+    height: 250px;
+    max-width: 100%;
+    object-fit: cover;
+  }
+  .hotel-btn.casino {
+    align-items: start;
+  }
 }
 @media screen and (max-width: 768px) {
   .home__title p {
@@ -284,6 +292,10 @@ h3 {
   }
   .hotel__numeric {
     display: none;
+  }
+  .homemain__part.casino h3 {
+    font-size: 16px;
+    line-height: 26px;
   }
 }
 @media screen and (max-width: 767px) {
