--- a/css/style.css
+++ b/css/style.css
@@ -615,6 +615,43 @@ section.termsbanner::after {
 }
 
 /*terms-css-end*/
+/*zabava-css-bet-start*/
+.row.casino {
+  border: 1px solid;
+  padding: 20px 0;
+  margin: 20px 0;
+}
+
+.homemain__part.casino {
+  justify-content: inherit;
+}
+.homemain__part.casino h3 {
+  font-size: 24px;
+  line-height: 34px;
+}
+.homemain__part.casino p::before {
+  display: none;
+}
+
+.homemain__picture.casino img {
+  height: 210px;
+  max-width: 85%;
+  object-fit: cover;
+}
+
+.hotel-btn.casino {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 100%;
+}
+.hotel-btn.casino a {
+  font-size: 16px;
+  padding: 13px 18px;
+}
+
+/*zabava-css-bet-end*/
 
 
 /*# sourceMappingURL=style.css.map */
