--- a/scss/style.scss
+++ b/scss/style.scss
@@ -240,7 +240,8 @@ section.homecard.cuisine {
             border-radius: 8px;
             width: 100%;
             transition: all .3s linear;
-            &:hover{
+
+            &:hover {
                 filter: grayscale(1);
             }
         }
@@ -463,7 +464,8 @@ section.localbanner {
         border: 1px solid;
         padding: 10px 20px;
         border-radius: 5px;
-        &:hover{
+
+        &:hover {
             background: $clr-darkblue;
             font-size: 17px;
             color: $clr-white;
@@ -609,5 +611,46 @@ section.termsbanner {
 }
 
 /*terms-css-end*/
+
+/*zabava-css-bet-start*/
+.row.casino {
+    border: 1px solid;
+    padding: 20px 0;
+    margin: 20px 0;
+}
+
+.homemain__part.casino {
+    justify-content: inherit;
+
+    h3 {
+        font-size: 24px;
+        line-height: 34px;
+    }
+
+    p::before {
+        display: none;
+    }
+}
+
+.homemain__picture.casino img {
+    height: 210px;
+    max-width: 85%;
+    object-fit: cover;
+}
+
+.hotel-btn.casino {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    height: 100%;
+
+    a {
+        font-size: 16px;
+        padding: 13px 18px;
+    }
+}
+
+/*zabava-css-bet-end*/
 
 /*# sourceMappingURL=style.css.map */
