--- a/css/style.css
+++ b/css/style.css
@@ -419,6 +419,13 @@ section.hotelbanner::after {
   padding-bottom: 30px;
 }
 
+.end__content.hotely h3 {
+  margin: 0 0 20px;
+}
+.end__content.hotely p {
+  margin-top: 0;
+}
+
 /*hotels-css-end*/
 /*budget-css-start*/
 section.budget.budget {
