--- a/scss/style.scss
+++ b/scss/style.scss
@@ -393,6 +393,16 @@ section.hotelbanner {
     padding-bottom: 30px;
 }
 
+.end__content.hotely {
+    h3 {
+        margin: 0 0 20px;
+    }
+
+    p {
+        margin-top: 0;
+    }
+}
+
 /*hotels-css-end*/
 
 /*budget-css-start*/
