--- a/css/style.css
+++ b/css/style.css
@@ -426,6 +426,10 @@ section.hotelbanner::after {
   margin-top: 0;
 }
 
+.end__content.hotely {
+  padding: 30px 0;
+}
+
 /*hotels-css-end*/
 /*budget-css-start*/
 section.budget.budget {
