--- a/scss/style.scss
+++ b/scss/style.scss
@@ -403,6 +403,10 @@ section.hotelbanner {
     }
 }
 
+.end__content.hotely {
+    padding: 30px 0;
+}
+
 /*hotels-css-end*/
 
 /*budget-css-start*/
